--- a/index.html
+++ b/index.html
@@ -15,41 +15,42 @@
             min-height: 100vh; /* Ensure full viewport height */
             display: flex;
             flex-direction: column;
-            overflow: hidden; /* Prevent body scroll, individual pages will handle scrolling */
+            /* Removed overflow: hidden from body to allow app-container to manage scroll */
         }
 
         /* Styling for the main application container */
         #app-container {
             position: relative; /* Allows absolute positioning of child pages */
-            min-height: 100vh;
+            min-height: 100vh; /* Ensure it covers full viewport height */
             width: 100vw;
+            overflow-y: auto; /* THIS IS KEY: Allow vertical scrolling for the whole app container if content overflows */
+            -webkit-overflow-scrolling: touch; /* Smooth scrolling on iOS */
         }
 
         /* Common styles for all pages/screens */
         .page {
             display: none; /* Hidden by default */
             width: 100%; /* Full width of parent container */
-            min-height: 100vh; /* Minimum full viewport height */
-            padding: 2rem 1rem; /* More vertical padding, slightly less horizontal for small screens */
+            /* Removed min-height: 100vh from individual pages so they expand with content */
+            padding: 2rem 1.5rem; /* More generous horizontal padding for mobile */
             box-sizing: border-box;
-            justify-content: center;
-            align-items: center;
+            justify-content: center; /* Default center for landing/camera/loading */
+            align-items: center; /* Default center for landing/camera/loading */
             text-align: center;
             flex-direction: column;
             transition: opacity 0.5s ease-in-out; /* Smooth fade effect */
             opacity: 0;
-            position: absolute; /* Position absolutely within app-container */
+            position: absolute; /* Position absolutely within app-container for transitions */
             top: 0;
             left: 0;
-            /* Ensure content can scroll if it exceeds viewport height */
-            overflow-y: auto;
-            -webkit-overflow-scrolling: touch; /* Smooth scrolling on iOS */
         }
 
         /* Active page visibility */
         .page.active {
             display: flex;
             opacity: 1;
+            /* Ensure the active page fills at least the viewport height if its content is short */
+            min-height: 100vh;
         }
 
         /* Spinner animation for loading screen */
@@ -70,7 +71,6 @@
         /* Button base styling */
         .app-button {
             @apply w-full sm:w-auto px-10 py-4 mt-8 text-xl font-bold rounded-full shadow-lg transition-all duration-300 ease-in-out transform;
-            /* Increased size and padding for better touch targets on mobile */
             letter-spacing: 0.05em; /* Slightly wider letter spacing */
             /* Add subtle 3D effect on press */
             &:active {
@@ -97,6 +97,8 @@
             justify-content: flex-start; /* Align content to the top */
             align-items: center; /* Center items horizontally within the page */
             text-align: left; /* Align text within sections to the left */
+            padding-top: 2rem; /* Add more padding at the top */
+            padding-bottom: 4rem; /* More padding at the bottom for scrolling */
         }
 
         /* Adjust max-width for content on larger screens, ensuring it doesn't get too wide */
@@ -111,6 +113,11 @@
             border-radius: 1rem; /* More rounded corners */
             box-shadow: 0 15px 25px -5px rgba(0, 0, 0, 0.2), 0 5px 10px -5px rgba(0, 0, 0, 0.1); /* Stronger shadow */
             object-fit: cover; /* Cover the area, potentially cropping */
+        }
+
+        /* More spacing between list items in results */
+        .results-list-item {
+            margin-bottom: 1rem; /* Adds space after each list item */
         }
     </style>
 </head>
@@ -171,7 +178,7 @@
         </div>
 
         <!-- 4. Analysis Results Page -->
-        <div id="analysisResults" class="page bg-white text-gray-800 py-8 md:py-12">
+        <div id="analysisResults" class="page bg-white text-gray-800">
             <div class="content-container space-y-12">
                 <h2 class="text-4xl sm:text-5xl md:text-6xl font-extrabold text-purple-700 text-center mb-8">Your RAVERSUS Analysis</h2>
 
@@ -181,17 +188,17 @@
                         <svg class="w-10 h-10 mr-4 text-purple-500" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m5.618-4.016A11.955 11.955 0 0112 2.944a11.955 11.955 0 01-8.618 3.04A12.01 12.01 0 002.944 12c.046 2.059.565 4.034 1.41 5.865a11.925 11.925 0 007.411 2.575 11.925 11.925 0 007.411-2.575c.845-1.831 1.364-3.806 1.41-5.865a12.01 12.01 0 00-3.096-7.056z"></path></svg>
                         Iridology Findings
                     </h3>
-                    <ul class="list-disc list-inside text-lg sm:text-xl text-gray-700 space-y-4">
-                        <li>
+                    <ul class="list-disc list-inside text-lg sm:text-xl text-gray-700">
+                        <li class="results-list-item">
                             <strong class="text-indigo-600">Minor Pigmentation in Iris:</strong> Suggests a slight predisposition to liver detoxification challenges. <span class="font-semibold text-sm text-gray-500">(Severity: Low)</span>
                         </li>
-                        <li>
+                        <li class="results-list-item">
                             <strong class="text-indigo-600">Stress Rings Observed:</strong> Indicates a history of nervous tension or stress accumulation. <span class="font-semibold text-sm text-gray-500">(Severity: Moderate)</span>
                         </li>
-                        <li>
+                        <li class="results-list-item">
                             <strong class="text-indigo-600">Slight Lymphatic Congestion:</strong> Evident by a subtle "cloudiness" in the lymphatic zone. <span class="font-semibold text-sm text-gray-500">(Severity: Low)</span>
                         </li>
-                        <li>
+                        <li class="results-list-item">
                             <strong class="text-indigo-600">Digestive Zone Weakness:</strong> A subtle radial furrowing in the digestive area indicates potential for occasional digestive discomfort. <span class="font-semibold text-sm text-gray-500">(Severity: Moderate)</span>
                         </li>
                     </ul>
@@ -206,20 +213,20 @@
                         <svg class="w-10 h-10 mr-4 text-green-500" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9.663 17h4.673M12 3v1m6.364 1.636l-.707.707M21 12h-1M4.343 19.657l-.707.707M1 12h1m6.364-1.636l-.707-.707M12 21v-1m-6.364-1.636l-.707-.707M3 12l-.707.707"></path></svg>
                         Personalized Recommendations
                     </h3>
-                    <ul class="list-disc list-inside text-lg sm:text-xl text-gray-700 space-y-4">
-                        <li>
+                    <ul class="list-disc list-inside text-lg sm:text-xl text-gray-700">
+                        <li class="results-list-item">
                             <strong class="text-emerald-600">Liver Support:</strong> Integrate a diet rich in bitter greens (e.g., dandelion, kale), lean proteins, and stay well-hydrated. Consider natural liver cleanses.
                         </li>
-                        <li>
+                        <li class="results-list-item">
                             <strong class="text-emerald-600">Stress Management:</strong> Dedicate 15-20 minutes daily to calming activities like meditation, deep breathing, or gentle yoga.
                         </li>
-                        <li>
+                        <li class="results-list-item">
                             <strong class="text-emerald-600">Lymphatic Drainage:</strong> Engage in regular, moderate physical activity such as brisk walking or swimming. Ensure adequate hydration.
                         </li>
-                        <li>
+                        <li class="results-list-item">
                             <strong class="text-emerald-600">Digestive Health:</strong> Emphasize whole, unprocessed foods. Include fermented foods like sauerkraut or kimchi for gut flora support.
                         </li>
-                        <li>
+                        <li class="results-list-item">
                             <strong class="text-emerald-600">Holistic Hydration:</strong> Increase your intake of filtered water and herbal teas throughout the day.
                         </li>
                     </ul>
@@ -268,6 +275,9 @@
             if (targetPage) {
                 targetPage.classList.add('active');
                 currentPage = pageId; // Update current page state
+
+                // Scroll to top of the page when a new page is shown
+                document.getElementById('app-container').scrollTop = 0;
             }
 
             // Specific logic for loading page to simulate progress
